2025-11-06  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha01: Reuptake Inhibitor';git push
	git tag -a 5.3.7-alpha01 -m 'Functionally identical to 5.3.6 except for two ncclimo name generation corner case fixes';git push --tags

	* ncclimo MPAS automatic name generation fixed to insert dot only when caseid option is used

	* ncclimo fix trim_leading_zeros() to work when input year is 0

2025-10-29  Charlie Zender  <zender@uci.edu>

	* ncks: Note that i,j are lat,lon not lon,lat with CMCC-ESM2 convention (opposite of usual NEMO CMIP5 convention)

2025-10-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6: Goff Island';git push
	git tag -a 5.3.6 -m 'ncremap/ncks: Fix 5.3.5 row/col check, nco_idw=ncoidw; ncremap/ncclimo: E3SMU_PATH for v1.12; ncclimo lndgrid is 2D';git push --tags

2025-10-27  Charlie Zender  <zender@uci.edu>

	* Merge changes to E3SMU_PATH by Andrew Nolan into ncremap/ncclimo

2025-10-17  Charlie Zender  <zender@uci.edu>

	* nco_grd_nfr() Add stubs to correctly infer corners of 2D regional grids that cross longitude branch cut

2025-10-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.6-alpha02: Casa Chimayo';git push
	git tag -a 5.3.6-alpha02 -m 'ncclimo/ncremap: E3SMU_PATH/lib; ncremap ncoidw fix, row/col chk sz fix';git push --tags

	* Fix 20250905 row/col sanity check to use correct size

	* ncks: map-checker print filename first so batch invocation informs reader of current map-file

2025-10-09  Charlie Zender  <zender@uci.edu>

	* Change ncremap nco_idw to new normalized name ncoidw. Fixes GitHub Issue #295 from Zachary Moon.

2025-10-08  Charlie Zender  <zender@uci.edu>

	* Add E3SMU_PATH/lib to ncclimo/ncremap

2025-09-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.6-alpha01 release procedure: