@@ -1,5 +1,9 @@
 2025-11-06  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.7-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha02: Black-eyed P\'s';git push
+	git tag -a 5.3.7-alpha02 -m '';git push --tags
+
 	* NCO 5.3.7-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.7-alpha01: Reuptake Inhibitor';git push
 	git tag -a 5.3.7-alpha01 -m 'Functionally identical to 5.3.6 except for two ncclimo name generation corner case fixes';git push --tags
